--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,8 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Verdana, sans-serif;
   text-align: center;
+  background-color: black;
+  color: white;
 }
 
 header, footer {
@@ -10,11 +12,8 @@ header, footer {
 }
 
 .cta {
-  color: #fff;
-  background-color: #007BFF;
-  padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 5px;
+  color: Aquamarine;
+  font-size: 16px;
 }
 
 video {
@@ -30,3 +29,22 @@ img {
 .app {
   width: 100px;
 }
+
+h1 {
+  font-size: 50px;
+  font-weight: normal;
+}
+
+h2 {
+  font-size: 42px;
+  font-weight: 300;
+}
+
+p {
+  color: Gray;
+  font-size: 21px;
+}
+
+.footer {
+  text-align: right;
+} 
